<resources>
    <string name="app_name">故事鼠</string>
    <string name="website">storyshu.com</string>
    <string name="back">返回</string>
    <string name="isAnonymous">匿名</string>
    <string name="real_name">实名</string>

    <string name="before_day">%1$d天前</string>
    <string name="before_hour">%1$d小时前</string>
    <string name="before_minute">%1$d分钟前</string>
    <string name="left_day">剩余%1$d天</string>
    <string name="left_hour">剩余%1$d小时</string>
    <string name="left_minute">剩余%1$d分钟</string>
    <string name="story_overdue">已过期</string>
    <string name="cancel">取消</string>
    <string name="send">发送</string>
    <string name="update">更新</string>
    <string name="loading">正在加载</string>
    <string name="load_failed">加载失败</string>
    <string name="load_end">加载完成</string>
    <string name="see_more">加载更多</string>
    <string name="no_more">已无更多</string>

    <!--欢迎页-->
    <string name="skip">跳过</string>

    <!--登录-->
    <string name="login_succeed">登录成功</string>
    <string name="login_failed">账号与密码不匹配</string>
    <string name="login_error">操作失败，请稍后重试</string>
    <string name="login_empty">账号不存在</string>

    <!--注册-->
    <string name="welcome_register">欢迎注册</string>
    <string name="input_phone_number">手机</string>
    <string name="input_phone_email">邮箱</string>
    <string name="input_password">密码</string>
    <string name="input_verify_number">请输入验证码</string>
    <string name="get_verify_number">获取验证码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forgot_password">忘记密码</string>
    <string name="free_register">注册账号</string>
    <string name="already_register">已有账号</string>
    <string name="login_phone_number_empty">请输入手机号码</string>
    <string name="login_username_empty">请输入邮箱地址</string>
    <string name="login_password_empty">请输入密码</string>
    <string name="login_password_too_sort">密码不得少于%1$d位</string>
    <string name="login_phone_number_illegal">请输入正确的手机号码</string>
    <string name="login_username_illegal">请输入正确的邮箱地址</string>
    <string name="login_password_illegal">密码错误,请重试</string>
    <string name="login_verify_number_empty">请输入验证码</string>
    <string name="login_verify_number_illegal">验证码错误</string>
    <string name="login_avatar_empty">请先设置头像</string>
    <string name="next">下一步</string>
    <string name="edit_login_info">填写登录信息</string>
    <string name="edit_user_info">完善个人信息</string>
    <string name="register_error">注册失败，请稍后重试！</string>

    <string name="register_succeed">欢迎注册！</string>
    <string name="register_repeat">该账号已存在！</string>

    <!--完善信息-->
    <string name="improve_data">完善用户信息</string>
    <string name="select_avatar">选择头像</string>
    <string name="input_nickname">昵称</string>
    <string name="nickname_empty">请输入昵称</string>
    <string name="nickname_too_long">昵称不得超过%1$d个字符</string>
    <string name="avatar_empty">请选择头像</string>


    <!--获取用户信息-->
    <string name="get_userinfo_error">获取用户信息失败，请稍后重试</string>

    <!--底部导航栏-->
    <string name="story_map">地图</string>
    <string name="airport">候机厅</string>
    <string name="message">消息</string>
    <string name="mine">我的</string>

    <!--首页 故事地图-->
    <string name="check_in">签到</string>
    <string name="create_story">编辑故事</string>
    <string name="in_location">正在获取定位</string>
    <string name="nearly_no_story">附近没有故事哦</string>
    <string name="need_location_permission">当前应用缺少必要的位置权限，请在\"权限\"—\"权限管理\"打开所需权限</string>
    <string name="sign_in_succeed">签到成功！</string>
    <string name="sign_in_yes">已经签到！</string>
    <string name="sign_in_day_dialog">您已签到%1$d天～</string>
    <string name="sign_in_day">签到%1$d天</string>

    <string name="sure">确定</string>

    <!--菜单-->
    <string name="my_stories">我的故事</string>
    <string name="my_footprint">我的足迹</string>
    <string name="my_rank">我的排名</string>
    <string name="my_ticket">我的机票</string>
    <string name="my_ornament">我的装扮</string>
    <string name="setting">设置</string>
    <string name="night_mode">夜间</string>
    <string name="sun_mode">白天</string>

    <!--筛选 -->
    <string name="sift_follow">关注</string>
    <string name="sift_all">最新</string>
    <string name="sift_hot">热门</string>

    <!--创建故事-->
    <string name="mic_story">短文</string>
    <string name="long_story">文章</string>
    <string name="video">视频</string>

    <string name="edit_location">所在位置</string>
    <string name="custom_location">找不到你的位置？</string>
    <string name="custom_location_ok">确定</string>
    <string name="create_story_hint">在这里写下你的故事吧</string>
    <string name="story_length_too_long">字数以达到上线%1$d个字</string>
    <string name="story_length_too_sort">再写点什么呗～</string>
    <string name="issue">发布</string>
    <string name="select_life_time_hint">选择消息停留时间（默认三天）</string>
    <string name="select_life_time">选择消息停留时间</string>
    <string name="life_time">故事停留时间</string>
    <string name="issue_failed">发布失败，请稍后重试</string>
    <string name="issue_succeed">发布成功</string>

    <string name="title_hint">请输入标题</string>
    <string name="content_hint">请输入正文</string>
    <string name="picture_hint">图片来自于%s</string>


    <!--故事详情-->
    <string name="story_detail">故事详情</string>
    <string name="report">举报</string>
    <string name="like">喜欢</string>
    <string name="oppose">不喜欢</string>
    <string name="communicate">写信</string>
    <string name="collect">收藏</string>
    <string name="discuss">讨论</string>

    <!--评论-->
    <string name="comment_issue_empty">写两个字呗</string>
    <string name="edit_comment">添加评论</string>
    <string name="hot_comment">热门评论</string>
    <string name="no_comment">暂无评论</string>
    <string name="reply_to">回复%1$s:%2$s</string>

    <!--候机厅-->
    <string name="search_hint">搜索你想到达的地方</string>
    <string name="search">搜索</string>
    <string name="ad">广告</string>
    <string name="go_here">到这去</string>
    <string name="search_error_empty">没有找到这个地方，重新输入试试</string>
    <string name="story_type_article">文章：%s</string>

    <!--信息-->
    <string name="like2me">我收到的赞</string>
    <string name="comment2me">我收到的评论</string>
    <string name="system2me">系统消息</string>
    <string name="like_my_story">赞了我的故事</string>
    <string name="like_my_comment">赞了我的评论</string>
    <string name="friend">好友</string>

    <!--我的页面-->
    <string name="quit_app">退出登录</string>
    <string name="quit_app_hint">是否确认退出登录，退出会清除之前的数据</string>
    <string name="follower">粉丝</string>
    <string name="following">关注</string>

    <!--标签控件-->
    <string name="add_tag">添加标签</string>
    <string name="delete_tag">删除标签</string>
    <string name="title_activity_register">RegisterActivity</string>

    <!--聊天室讨论-->
    <string name="join_chatroom_failed">加入聊天室失败，请稍后重试</string>
    <string name="send_message_failed">发送消息失败</string>

    <!--图片选择器-->
    <string name="take_photo">拍摄照片</string>
    <string name="all_images">全部图片</string>
    <string name="folder_image_count">共%1$d张</string>
    <string name="preview_image_count">%1$s/%2$s</string>
    <string name="select_limit">最多选择%1$d张图片</string>
    <string name="select_pic">选择图片</string>
    <string name="complete">完成</string>
    <string name="select_complete">完成(%1$s/%2$s)</string>
    <string name="preview_count">预览(%1$s)</string>
    <string name="photo_crop">图片裁剪</string>
    <string name="origin">原图</string>
    <string name="origin_size">原图(%1$s)</string>

    <!--选择生命期-->
    <string name="day_unit">天</string>
    <string name="hour_unit">小时</string>

    <!--更新软件-->
    <string name="download_failed">下载失败</string>

    <!--错误提示-->
    <string name="net_error">网络错误，稍后重试</string>
    <string name="user_logined_error">账号已在别处登录</string>
    <string name="service_connect_error">无法连接服务器，请稍后重试</string>
    <string name="un_know_error">未知错误，稍后重试</string>


    <!--单位-->
    <string name="unit_month">%1$s月</string>
</resources>
