<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--登录、注册-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.storyshu.storyshu.widget.imageview.RoundImageView
            android:layout_width="@dimen/image_small"
            android:layout_height="@dimen/image_small"
            android:layout_marginBottom="@dimen/margin_big"
            android:src="@drawable/test"
            app:RoundType="circle" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height">

            <EditText
                android:id="@+id/login_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:hint="@string/input_phone_number"
                android:inputType="phone" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height">

            <EditText
                android:id="@+id/login_verify_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:hint="@string/input_verify_number"
                android:inputType="number" />

            <RelativeLayout
                android:id="@+id/login_get_verify_number"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/margin_small">

                <TextView
                    android:id="@+id/login_countdown"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/get_verify_number" />
            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/login_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login" />
        </RelativeLayout>
    </LinearLayout>

    <!--第三方登录-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_normal"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/icon_small"
                android:layout_height="@dimen/icon_small"
                android:src="@drawable/set" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>