<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <!--<ImageView-->
    <!--android:layout_width="@dimen/image_normal"-->
    <!--android:layout_height="@dimen/image_normal"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:src="@drawable/dishudong_bg" />-->

    <!--<ImageView-->
    <!--android:id="@+id/welcome_dishu"-->
    <!--android:layout_width="@dimen/image_normal"-->
    <!--android:layout_height="@dimen/image_normal"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:src="@drawable/dishu" />-->

    <!--<View-->
    <!--android:layout_width="@dimen/image_normal"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_below="@id/welcome_dishu"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_marginTop="-19dp"-->
    <!--android:background="@color/colorWhite" />-->

    <!--<ImageView-->
    <!--android:visibility=""-->
    <!--android:layout_width="@dimen/image_normal"-->
    <!--android:layout_height="@dimen/image_normal"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:src="@drawable/dishudong" />-->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/image_normal"
        android:background="@color/colorGrayLight"
        android:scaleType="centerCrop" />

    <!--跳过-->
    <TextView
        android:id="@+id/welcome_skip"
        android:layout_width="80dp"
        android:layout_height="@dimen/selector_height"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/margin_big"
        android:gravity="center"
        android:text="@string/skip" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_normal"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/margin_normal"
        android:paddingRight="@dimen/margin_normal">

        <ImageView
            android:layout_width="@dimen/icon_normal"
            android:layout_height="@dimen/icon_normal"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/welcome_logo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_normal"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/website"
                android:textColor="@color/colorGrayDeep"
                android:textSize="@dimen/font_min" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>